# exx-compression

./: CMakeLists.txt  README.md  exx-compression.sublime-workspace  package.xml
include/dbscan/: dbscan.cpp  dbscan.h  dbscan.hpp  rectangle.cpp  rectangle.h
include/exx_compression/: compression.h
include/moment_of_inertia/: moment_of_inertia_estimation.h
include/plane_features/: plane_features.h
include/utils/: utils.cpp  utils.h
msg/: planes.msg
src/: compression.cpp  plane_features.cpp
